--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,12 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Table models directory
+database/models/
+
+# nodemon.json
+nodemon.json
+
+# social-network.sql
+social-network.sql
