--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -15,6 +16,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql2": "^2.1.0",
+    "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.4"
   },
