--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "http-errors": "~1.6.2",
@@ -18,7 +19,8 @@
     "mysql2": "^2.1.0",
     "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.4",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
