--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^2.1.0",
     "node-sass-middleware": "^0.11.0",
+    "path": "^0.12.7",
     "pug": "^2.0.4",
     "sequelize": "^5.21.4",
     "uuid": "^7.0.3"
